style.css
        body{
            background-image: 
            linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
            url("cosmic-symmetry-3840x2160-20464.jpg");
            background-repeat: no-repeat;
            background-position: center center;
            background-size: cover;
            background-attachment: fixed;
            background-color: black;
            font-family: Roboto Mono;
            padding:25px 50px;
            padding-bottom: 100px;
        }
        .hidden{
            display: none !important;
            
        }
        #name-modal {
            display: flex;
            justify-content: center;
            align-items: center ;
            height: 65vh;
        }
        #greeting-page {
            color: white;
            text-align: center;
            padding: 25px 50px;
        }
        #greeting-page h2 {
            font-size: 50px;
            margin: 25px 0;
        }
        #greeting-page p {
            font-size: 25px;
        }
        .name-container{
            display: flex;
            justify-content: center;
            align-items: center;
            gap: 12px;
            padding: 0px 20px;
            
        }
        
        #name-input {
            flex: 1;
            max-width: 480px;
            
            border: none;
            border-radius: 15px;
            padding: 16px 20px;
            font-size: 17px;
            background-color: rgb(255,255,255,0.5);
            backdrop-filter: blur(5px);
            
            
            
            
        }
        #name-input::placeholder {
            color: rgba(0, 0, 0, 0.8);
            font-size: 17px;
        }
        #save-name-btn {
            background: linear-gradient( 
                135deg,
                rgba(149, 75, 14, 0.85),
                rgba(77, 41, 7, 0.7),
                rgba(209, 110, 4, 0.6),
                rgba(80, 40, 10, 0.8));
            border: none;
            border-radius: 30px;
            color: white;
            font-size: 17px;
            font-family: Roboto Mono;
            padding: 0 25px;
            
            height: 60px; 
            transition: 
            background-position 0.4s ease-out,
            box-shadow 0.4s ease-out,
            padding 0.3s ease-out,
            outline 0.4s ease-in-out;
            background-size: 200% 100%;
            background-position: 0 0;
            cursor: pointer;
            outline: none;
            
        }
        #save-name-btn:hover {
            background-position: 100% 0 ;
            box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
            font-weight: 600;
            transform: scale(1.05);
            transition: 
            color 0.3s, transform 0.3s, background-position 0.5s, font-weight 0.3s, box-shadow 0.4s ease-in-out;
        }
        #save-name-btn:active{
            outline: 1px solid rgba(255, 255, 255, 0.5);
            box-shadow: none;
            transform: scale(0.95);
        }
    
        .box1{
            height: 450px;
            width: 600px;
            background-color: rgba(255,255,255,0.1);
            margin: 10px;
            backdrop-filter: blur(5px);
            border-radius: 40px;
            outline: 1px solid rgba(255, 255, 255, 0.2);
            padding-top: 10px;
            padding-left: 25px;
            padding-right: 25px;
            padding-bottom: 10px;
            

        }
        /* .input-container{
            display: flex;
            align-items: center;
            
        } */
        #task {
            font-family: Roboto Mono;
            font-size: 23px;
            font-weight: 700;
            border-bottom: 1px solid rgba(255,255,255,0.5);
            padding-bottom: 15px;
            color: white;
            display: flex;
            justify-content: center;
            
            
        }
        #task-input {
            border: none;
            border-radius: 15px;
            padding: 16px 20px;
            font-size: 17px;
            background-color: rgb(255,255,255,0.5);
            backdrop-filter: blur(5px);
            
            
            
        }
        #task-input::placeholder {
            color: rgba(0, 0, 0, 0.8);
            font-size: 17px;
        }
        .add{
            background: linear-gradient( 
                135deg,
                rgba(149, 75, 14, 0.85),
                rgba(77, 41, 7, 0.7),
                rgba(209, 110, 4, 0.6),
                rgba(80, 40, 10, 0.8));
            border: none;
            border-radius: 30px;
            color: white;
            font-size: 17px;
            font-family: Roboto Mono;
            padding-left: 25px;
            padding-right:25px;
            padding-top:15px;
            padding-bottom:15px;
            margin-left: 10px;
            transition: 
            background-position 0.4s ease-out,
            box-shadow 0.4s ease-out,
            transform 0.3s ease-out,
            outline 0.4s ease-in-out;
            background-size: 200% 100%;
            background-position: 0 0;
            cursor: pointer;
            
        }
        .add:hover {
            background-position: 100% 0 ;
            box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
            font-weight: 600;
            transform: scale(1.05);
            transition: 
            color 0.3s, transform 0.3s, background-position 0.5s, font-weight 0.3s;
            
        }
        .add:active {
            outline: 1px solid rgba(255, 255, 255, 0.5);
            box-shadow: 0 0 0 rgba(255,255,255,0);
            transform: scale(0.95);
        }
        #task-container {
            color: white;
            margin-top: 10px;
            
        }   
        .task {
            display: flex;
            justify-content: space-between;
            align-items: center;
            font-size: 17px;
            padding-bottom: 15px;
        }
/* ... */

